[package]
name = "retvo"
version = "0.0.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
eager = "0.1.0"
ndarray = "*"
macro_rules_attribute = "*"
num = "0.4.0"
itertools = "0.10.5"
gd_core = { path = "gd_core" }
gdmacro = { path = "gdmacro" }